--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
 </head>
 <body>
     
-    <div class="container">
-        <div class="card">
-            <div class="image">
-                <div class="img"><img src="images/image-equilibrium.jpg" alt="nft" class="nft"></div>
-                <div class="hover"><img src="images/icon-view.svg" alt="view"></div>
-            </div>
-            <div class="title"><a href="#"><h3>Equilibrium #3429</h3></a></div>
-            <div class="info"><p>Our Equilibrium collection promotes balance and calm.</p></div>
-            <div class="row">
-                <div class="left">
-                    <img src="images/icon-ethereum.svg" alt="Etherium">
-                    <p>0.041 ETH</p>
+    <main>
+        <div class="container">
+            <div class="card">
+                <div class="image">
+                    <div class="img"><img src="images/image-equilibrium.jpg" alt="nft" class="nft"></div>
+                    <div class="hover"><img src="images/icon-view.svg" alt="view"></div>
                 </div>
-                <div class="right">
-                    <img src="images/icon-clock.svg" alt="Time left">
-                    <p>3 days left</p>
+                <div class="title"><a href="#"><h3>Equilibrium #3429</h3></a></div>
+                <div class="info"><p>Our Equilibrium collection promotes balance and calm.</p></div>
+                <div class="row">
+                    <div class="left">
+                        <img src="images/icon-ethereum.svg" alt="Etherium">
+                        <p>0.041 ETH</p>
+                    </div>
+                    <div class="right">
+                        <img src="images/icon-clock.svg" alt="Time left">
+                        <p>3 days left</p>
+                    </div>
                 </div>
-            </div>
-            <hr>
-            <div class="end">
-                <img src="images/image-avatar.png" alt="Profile">
-                <p>Creation of <a href="#">Jules Wyvern</a></p>
+                <hr>
+                <div class="end">
+                    <img src="images/image-avatar.png" alt="Profile">
+                    <p>Creation of <a href="#">Jules Wyvern</a></p>
+                </div>
             </div>
         </div>
-    </div>
+    </main>
 
 </body>
 </html>
